v12/fixtures/ast/errors/struct_type_mismatch/source.able
struct Point {
  x: i32
}

struct Vector {
  dx: i32
}

p := Point { x: 1 }
Vector { dx } := p
